Fix Docs Header z-index

--- a/src/app/components/Docs/index.module.css
+++ b/src/app/components/Docs/index.module.css
@@ -177,6 +177,7 @@
   .header {
     grid-template-columns: 24px auto max-content;
     padding: 0;
+    z-index: 2;
   }
 
   .headerLogo,
